# agent_template

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_message.http
app/config/: config.py
app/routes/: message.py
app/services/: agent_service.py
